--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,2 @@
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-anyio==3.6.2
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.4.0
-async-lru==2.0.4
-async-timeout==4.0.2
-attrs==22.2.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.0.7
-cycler==0.11.0
-debugpy==1.7.0
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-entrypoints==0.4
-exceptiongroup==1.1.3
-executing==1.2.0
-fastapi==0.92.0
-fastjsonschema==2.18.0
-ffmpy==0.3.0
-fonttools==4.38.0
-fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2023.3.0
-gitdb==4.0.11
-GitPython==3.1.43
-gradio==3.20.0
-gTTS==2.5.3
-h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
-idna==3.4
-ipykernel==6.25.2
-ipython==8.15.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.0
-isoduration==20.11.0
-jedi==0.19.0
-Jinja2==3.1.2
-jiter==0.5.0
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-kiwisolver==1.4.4
-linkify-it-py==2.0.0
-llvmlite==0.39.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mistune==3.0.1
-mpmath==1.2.1
-multidict==6.0.4
-nbclient==0.8.0
-nbconvert==7.8.0
-nbformat==5.9.2
-nest-asyncio==1.5.7
-notebook==7.0.3
-notebook_shim==0.2.3
-numba==0.56.4
-numpy==1.23.5
-openai==1.43.0
-opencv-python==4.10.0.84
-orjson==3.8.7
-overrides==7.4.0
-packaging==23.0
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.10.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==5.28.0
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==17.0.0
-PyAudio==0.2.14
-pycparser==2.21
-pycryptodome==3.17
-pydantic==1.10.5
-pydeck==0.9.1
-pydub==0.25.1
-pygame==2.6.0
-Pygments==2.16.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-python-multipart==0.0.6
-pytz==2022.7.1
-pywin32==306
-pywinpty==2.0.11
-PyYAML==6.0
-pyzmq==25.1.1
-qtconsole==5.4.4
-QtPy==2.4.0
-referencing==0.30.2
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.8.1
-rpds-py==0.10.2
-scipy==1.10.1
-Send2Trash==1.8.2
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-SpeechRecognition==3.10.4
-stack-data==0.6.2
-starlette==0.25.0
-streamlit==1.38.0
-sympy==1.11.1
-tenacity==8.5.0
-terminado==0.17.1
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.5
-traitlets==5.9.0
-typing_extensions==4.12.2
-uc-micro-py==1.0.1
-uri-template==1.3.0
-urllib3==1.26.14
-uvicorn==0.20.0
-watchdog==4.0.2
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.2
-websockets==10.4
-widgetsnbextension==4.0.8
-yarl==1.8.2
+   streamlit
+   openai
